Adding the basic html template
Setting things up for the final project so that I can add to it over the
next few weeks.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+
 /* Hello world of wonder!*/
+
+<html>
+
+	<head>
+
+		<tile>Dawn's page</tile>
+
+
+<style>
+
+h1 {
+	text-align: center;
+	color: purple;
+}
+
+
+</style>
+
+
+</head>
+
+
+
+
+<body>
+
+<h1>The title of the page of new website goes here</h1>
+
+
+</body>
+
+
+</html>j
